# sidekick-cli

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
src/sidekick/: cli.py  commands.py  config.py  constants.py  events.py  exceptions.py  main.py  repl.py  repl.py.bak  session.py  setup.py  types.py  ui.py
src/sidekick/agents/: main.bak.py  main.py
src/sidekick/cli/: __init__.py  commands.py  main.py  repl.py
src/sidekick/configuration/: defaults.py  models.py  settings.py
src/sidekick/core/: state.py  tool_handler.py
src/sidekick/core/agents/: main.py
src/sidekick/core/setup/: __init__.py  agent_setup.py  base.py  config_setup.py  coordinator.py  environment_setup.py  telemetry_setup.py  undo_setup.py
src/sidekick/prompts/: system.txt
src/sidekick/services/: mcp.py  telemetry.py  undo_service.py
src/sidekick/tools/: base.py  read_file.py  run_command.py  update_file.py  write_file.py
src/sidekick/ui/: __init__.py  console.py  input.py  keybindings.py  output.py  panels.py  tool_ui.py  validators.py
src/sidekick/utils/: diff_utils.py  file_utils.py  helpers.py  mcp.py  setup.py  system.py  telemetry.py  text_utils.py  ui.py  undo.py  user_config.py  user_configuration.py
tests/: test_helpers.py  test_system.py
